--- a/ThinkerExtensions/ThinkerExtensions.csproj
+++ b/ThinkerExtensions/ThinkerExtensions.csproj
@@ -49,7 +49,7 @@
     <Compile Include="StringAndCharsExtensions\CharExtensions.cs" />
     <Compile Include="GeometryExtensions\GeometryExtensions.cs" />
     <Compile Include="MathExtensions\Combinatorics\Permutations.cs" />
-    <Compile Include="MathExtensions\NumericalExtensions.cs" />
+    <Compile Include="MathExtensions\MathExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MathExtensions\SmallGroupsExtensions.cs" />
     <Compile Include="RandomExtensions\RandomExtensions.cs" />
