--- a/ThinkerExtensionsTests/ThinkerExtensionsTests.csproj
+++ b/ThinkerExtensionsTests/ThinkerExtensionsTests.csproj
@@ -55,7 +55,7 @@
     <Compile Include="GraphicalExtensions\ColorExtensionsTests.cs" />
     <Compile Include="GraphicalExtensions\GdiExtensionsTests.cs" />
     <Compile Include="MathExtensions\Combinatorics\PermutationsTests.cs" />
-    <Compile Include="MathExtensions\NumericalExtensionsTests.cs" />
+    <Compile Include="MathExtensions\MathExtensionsTests.cs" />
     <Compile Include="MathExtensions\SmallGroupsExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomExtensions\RandomExtensionsTests.cs" />
