--- a/ThinkerExtensions/ThinkerExtensions.csproj
+++ b/ThinkerExtensions/ThinkerExtensions.csproj
@@ -34,6 +34,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,19 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DictionaryExtensions\DictionaryExtensions.cs" />
-    <Compile Include="GraphicalExtensions\ColorExtensions.cs" />
-    <Compile Include="GraphicalExtensions\GdiExtensions.cs" />
-    <Compile Include="GeometryExtensions\AdvancedGeometry.cs" />
-    <Compile Include="GeometryExtensions\Angle.cs" />
-    <Compile Include="LinqExtensions\LinqExtensions.cs" />
-    <Compile Include="StringAndCharsExtensions\CharExtensions.cs" />
-    <Compile Include="GeometryExtensions\GeometryExtensions.cs" />
-    <Compile Include="MathExtensions\MathExtensions.cs" />
+    <Compile Include="Controls\ControlExtensions.cs" />
+    <Compile Include="Dictionary\DictionaryExtensions.cs" />
+    <Compile Include="Graphics\ColorExtensions.cs" />
+    <Compile Include="Graphics\GdiExtensions.cs" />
+    <Compile Include="Geometry\AdvancedGeometry.cs" />
+    <Compile Include="Geometry\Angle.cs" />
+    <Compile Include="Linq\LinqExtensions.cs" />
+    <Compile Include="Text\CharExtensions.cs" />
+    <Compile Include="Geometry\GeometryExtensions.cs" />
+    <Compile Include="Math\MathExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RandomExtensions\RandomExtensions.cs" />
-    <Compile Include="SerializationExtensions\XmlSerializationExtensions.cs" />
-    <Compile Include="StringAndCharsExtensions\StringExtensions.cs" />
+    <Compile Include="Random\RandomExtensions.cs" />
+    <Compile Include="Serialization\XmlSerializationExtensions.cs" />
+    <Compile Include="Text\StringExtensions.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
